Throwing Elsewhere in there

--- a/index.html
+++ b/index.html
@@ -18,3 +18,6 @@ title: Golden Meanie
     {% endfor %}
   </ul>
 </section>
+<section class="elsewhere">
+  {% include elsewhere.html %}
+</section>
