Suppressing auto-excerpts and being more consistent about quoting excerpts

--- a/_posts/2013-08-06-muscle-memory.html
+++ b/_posts/2013-08-06-muscle-memory.html
@@ -2,7 +2,7 @@
 layout: post
 title: Memory & Layout
 date: 2013-08-30
-excerpt: Your fingers think faster than you do
+excerpt: "Your fingers think faster than you do"
 ---
 
 <div class="img-block two-up">
@@ -50,4 +50,3 @@ excerpt: Your fingers think faster than you do
 <p>
    I've done this for many apps, you can see the alignments above. Some of the alignments are more of-a-type than literal duplicate function. I'm also not too rigid, I can deviate if it makes sense. The exceptions are easy to track because everything else is organized.
 </p>
-
