--- a/_posts/2013-08-06-muscle-memory.html
+++ b/_posts/2013-08-06-muscle-memory.html
@@ -27,7 +27,7 @@ excerpt: "Your fingers think faster than you do"
 </div>
 
 <p>
-  “Muscle Memory” describes the power of habit. As you do something over and over, you establish neural pathways, that are like a shortcut for that action. You don’t have to think as deeply about what you are doing and react instinctually. Athletes and soldier are very familiar with this concept and spend a lot of time training with this in mind. But <em>everyone</em> is doing this all the time with their daily routines. You probably always brush your teeth in the same pattern. If you drive, you probably always put your seatbelt on and then turn the key, and then check the mirrors. Or the reverse, the point is, you’ve established a pattern that works for you and use it every time.
+  “Muscle Memory” describes the power of habit. As you do something over and over, you establish neural pathways, that are like a shortcut for that action. You don’t have to think as deeply about what you are doing and react instinctually. Athletes and soldiers are very familiar with this concept and spend a lot of time training with this in mind. But <em>everyone</em> is doing this all the time with their daily routines. You probably always brush your teeth in the same pattern. If you drive, you probably always put your seatbelt on and then turn the key, and then check the mirrors. Or the reverse, the point is, you’ve established a pattern that works for you and use it every time.
 </p>
 
 <p>
